--- a/integrated_admin/package.json
+++ b/integrated_admin/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.8.4",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.8",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
+    "vue-cropper": "^1.1.4",
     "vue-router": "^4.5.0",
     "xlsx": "^0.18.5"
   },
