--- a/check_app/package.json
+++ b/check_app/package.json
@@ -52,6 +52,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4060420250429001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4060420250429001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4060420250429001",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
@@ -63,6 +64,7 @@
     "@dcloudio/uni-stacktracey": "3.0.0-4060420250429001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4060420250429001",
     "@vue/runtime-core": "^3.4.21",
+    "postcss-import": "^16.1.0",
     "sass": "^1.87.0",
     "vite": "5.2.8"
   }
