--- a/check_app/package.json
+++ b/check_app/package.json
@@ -33,7 +33,14 @@
     "build:mp-xhs": "uni build -p mp-xhs",
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
-    "build:quickapp-webview-union": "uni build -p quickapp-webview-union"
+    "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
+	
+	
+
+	"tailwind-dev": "tailwindcss -i ./tailwind-input.css -o ./static/tailwind.css --watch",  
+	"tailwind-build": "tailwindcss -i ./tailwind-input.css -o ./static/tailwind.css"  
+		
+	
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-4060420250429001",
@@ -64,8 +71,16 @@
     "@dcloudio/uni-stacktracey": "3.0.0-4060420250429001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4060420250429001",
     "@vue/runtime-core": "^3.4.21",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "postcss-import": "^16.1.0",
     "sass": "^1.87.0",
+    "tailwindcss": "^3.4.17",
     "vite": "5.2.8"
-  }
+  },
+  "description": "基于 uni-app 3.0 框架开发的打卡系统应用，支持 H5、微信小程序和 App 三端。使用 Vue 3 组合式 API 和 JavaScript 语言开发。",
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
