--- a/admin_frontend/integrated_admin/package.json
+++ b/admin_frontend/integrated_admin/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@iconify/vue": "^5.0.0",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
-    "echarts": "^5.6.0",
+    "echarts": "^5.4.3",
     "element-plus": "^2.9.8",
+    "lodash-es": "^4.17.21",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-cropper": "^1.1.4",
@@ -21,7 +23,15 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/node": "^22.15.29",
     "@vitejs/plugin-vue": "^5.2.2",
+    "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.8.3",
     "vite": "^6.3.1"
   }
 }
