--- a/admin_frontend_v2/vue-pure-admin-main/package.json
+++ b/admin_frontend_v2/vue-pure-admin-main/package.json
@@ -124,6 +124,7 @@
     "@iconify/vue": "4.2.0",
     "@intlify/unplugin-vue-i18n": "^6.0.8",
     "@stagewise/toolbar": "^0.4.1",
+    "@stagewise/toolbar-vue": "^0.4.1",
     "@tailwindcss/vite": "^4.1.8",
     "@types/codemirror": "^5.60.16",
     "@types/dagre": "^0.7.52",
